# creditcoin-fork

./: .gitignore  Cargo.toml  README.md  fork.json  set-sudo-alice.py
.github/workflows/: ci.yml  release.yml
src/: cli.rs  main.rs
tasks/: lessons.md  todo.md
