[package]
name = "creditcoin-fork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.3"
clap = { version = "4.0.32", features = ["derive"] }
color-eyre = "0.6.2"
console = "0.15.5"
extend = "1.1.2"
futures = "0.3.25"
fxhash = "0.2.1"
hex = "0.4.3"
indicatif = "0.17.2"
jsonrpsee = { version = "0.16.2", features = [
    "async-client",
    "client-ws-transport",
    "http-client",
] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
sp-core = "10.0.0"
subxt = "0.25.0"
tokio = { version = "1.23.1", features = ["full"] }
